--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,8 +22,8 @@ androidx-test-espresso = "3.5.1"
 androidx-test-ext-junit = "1.1.5"
 androidx-test-ext-truth = "1.5.0"
 androidx-window = "1.3.0-beta01"
-androidxHiltNavigationCompose = "1.1.0"
-androix-test-uiautomator = "2.2.0"
+androidxHiltNavigationCompose = "1.2.0"
+androix-test-uiautomator = "2.3.0"
 coil = "2.4.0"
 # @keep
 compileSdk = "34"
@@ -32,9 +32,9 @@ coroutines = "1.8.0"
 google-maps = "18.2.0"
 gradle-versions = "0.51.0"
 hilt = "2.48.1"
-hiltExt = "1.1.0"
+hiltExt = "1.2.0"
 # @pin When updating to AGP 7.4.0-alpha10 and up we can update this https://developer.android.com/studio/write/java8-support#library-desugaring-versions
-jdkDesugar = "1.2.2"
+jdkDesugar = "2.0.4"
 junit = "4.13.2"
 # @pin Update in conjuction with Compose Compiler
 kotlin = "1.9.0"
@@ -104,6 +104,8 @@ androidx-palette = { module = "androidx.palette:palette", version.ref = "android
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+androidx-room-testing = { module = "androidx.room:room-testing", version.ref = "room" }
+androidx-arch-test-core = { module = " androidx.arch.core:core-testing", version = "2.2.0" }
 androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test" }
 androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-test-espresso" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-test-ext-junit" }
