--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,34 +4,35 @@
 #####
 [versions]
 accompanist = "0.34.0"
-androidGradlePlugin = "8.3.1"
-androidx-activity-compose = "1.8.2"
+androidGradlePlugin = "8.3.2"
+androidx-activity-compose = "1.9.0"
 androidx-appcompat = "1.6.1"
-androidx-benchmark = "1.2.0"
-androidx-benchmark-junit4 = "1.2.1"
-androidx-compose-bom = "2024.04.00"
+androidx-benchmark = "1.2.4"
+androidx-benchmark-junit4 = "1.2.4"
+androidx-compose-bom = "2024.05.00"
 androidx-constraintlayout = "1.0.1"
-androidx-corektx = "1.13.0-rc01"
+androidx-corektx = "1.13.1"
 androidx-glance = "1.0.0"
-androidx-lifecycle-compose = "2.7.0"
-androidx-lifecycle-runtime-compose = "2.7.0"
+androidx-lifecycle-compose = "2.8.0"
+androidx-lifecycle-runtime-compose = "2.8.0"
 androidx-navigation = "2.7.7"
 androidx-palette = "1.0.0"
 androidx-test = "1.5.0"
 androidx-test-espresso = "3.5.1"
 androidx-test-ext-junit = "1.1.5"
 androidx-test-ext-truth = "1.5.0"
-androidx-window = "1.3.0-beta01"
+androidx-window = "1.3.0-rc01"
 androidxHiltNavigationCompose = "1.2.0"
 androix-test-uiautomator = "2.3.0"
 coil = "2.4.0"
+mockito = "mockito"
 # @keep
 compileSdk = "34"
 compose-compiler = "1.5.4"
 coroutines = "1.8.0"
 google-maps = "18.2.0"
 gradle-versions = "0.51.0"
-hilt = "2.48.1"
+hilt = "2.49"
 hiltExt = "1.2.0"
 # @pin When updating to AGP 7.4.0-alpha10 and up we can update this https://developer.android.com/studio/write/java8-support#library-desugaring-versions
 jdkDesugar = "2.0.4"
@@ -42,13 +43,13 @@ ktlint = "11.0.0"
 kotlinx_immutable = "0.3.5"
 ksp = "1.9.20-1.0.14"
 maps-compose = "3.1.1"
-material = "1.11.0"
+material = "1.12.0"
 # @keep
 minSdk = "21"
 okhttp = "4.11.0"
 robolectric = "4.12.1"
 rome = "1.18.0"
-room = "2.6.0"
+room = "2.6.1"
 secrets = "2.0.1"
 # @keep
 targetSdk = "33"
@@ -133,6 +134,8 @@ okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 rometools-modules = { module = "com.rometools:rome-modules", version.ref = "rome" }
 rometools-rome = { module = "com.rometools:rome", version.ref = "rome" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
+mockito-android = { module = "org.mockito:mockito-android", version.ref = "mockito" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
